# PyStarter

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
pyhelper/: __init__.py  command_line.py  pyhelper.py
pystarter/: __init__.py  command_line.py  license.py  pystarter.py  test.py
