[tool.poetry]
name = "pystarter"
version = "1.2.0"
description = "A program to help you start python and git projects with file creations"
authors = ["Rafael Cenzano <savagecoder77@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
